// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameSlider /> should render white arrows if color passed 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c12 {
  background-image: linear-gradient(180deg,#ff5f5f 0%,#f062c0 50%);
  border: none;
  border-radius: 0.4rem;
  color: #FAFAFA;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.2rem;
  height: 3rem;
}

.c12:hover,
.c12:focus {
  background-image: linear-gradient(180deg,#e35565 0%,#d958a6 50%);
}

.c12 svg {
  width: 1.6rem;
}

.c12 svg + span {
  margin-left: 0.8rem;
}

.c3 {
  background-color: #FAFAFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 100%;
  position: relative;
}

.c4 {
  -webkit-animation: placeholderShimmer 1s linear infinite forwards;
  animation: placeholderShimmer 1s linear infinite forwards;
  background-size: 80rem 14rem;
  background: #ededed;
  background-image: linear-gradient( to right,#ededed 0%,#e1e1e1 20%,#ededed 40%,#ededed 100% );
  height: 14rem;
  width: 100%;
}

.c4 img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c6 {
  max-width: calc(100% - 2.5rem);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  height: 100%;
  margin: 1.6rem;
}

.c7 {
  color: #030517;
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 1.6rem;
}

.c8 {
  color: #8F8F8F;
  font-size: 1.4rem;
  font-weight: 600;
}

.c13 {
  background-color: transparent;
  border: none;
  color: #F231A5;
  cursor: pointer;
  outline: none;
  position: absolute;
  top: -0.5rem;
  right: 0;
}

.c13 svg {
  width: 2.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 0.8rem;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  height: 3rem;
  color: #8F8F8F;
  margin-right: 1.6rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  height: 3rem;
  color: #FAFAFA;
  padding: 0 0.8rem;
  background-color: #3CD3C1;
  border-radius: 0.4rem;
  margin-right: calc(0.8rem / 2);
}

.c1 .slick-slider {
  position: relative;
  display: block;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -khtml-user-select: none;
  -ms-touch-action: pan-y;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent;
}

.c1 .slick-list {
  position: relative;
  display: block;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.c1 .slick-list:focus {
  outline: none;
}

.c1 .slick-list.dragging {
  cursor: pointer;
  cursor: hand;
}

.c1 .slick-slider .slick-track,
.c1 .slick-slider .slick-list {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c1 .slick-track {
  position: relative;
  top: 0;
  left: 0;
  display: block;
}

.c1 .slick-track:before,
.c1 .slick-track:after {
  display: table;
  content: '';
}

.c1 .slick-track:after {
  clear: both;
}

.c1 .slick-loading .slick-track {
  visibility: hidden;
}

.c1 .slick-slide {
  display: none;
  float: left;
  height: 100%;
  min-height: 1px;
}

.c1 [dir='rtl'] .slick-slide {
  float: right;
}

.c1 .slick-slide img {
  display: block;
}

.c1 .slick-slide.slick-loading img {
  display: none;
}

.c1 .slick-slide.dragging img {
  pointer-events: none;
}

.c1 .slick-initialized .slick-slide {
  display: block;
}

.c1 .slick-loading .slick-slide {
  visibility: hidden;
}

.c1 .slick-vertical .slick-slide {
  display: block;
  height: auto;
  border: 1px solid transparent;
}

.c1 .slick-arrow.slick-hidden {
  display: none;
}

.c0 .slick-track,
.c0 .slick-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .slick-slide > div {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  height: 100%;
  margin: 0 0.8rem;
}

.c0 .slick-list {
  margin: 0 -0.8rem;
}

.c0 .slick-prev,
.c0 .slick-next {
  display: block;
  color: #FAFAFA;
  cursor: pointer;
  height: 2.5rem;
  width: 2.5rem;
  padding: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c0 .slick-prev {
  left: -5.6rem;
}

.c0 .slick-next {
  right: -5.6rem;
}

.c0 .slick-prev.slick-disabled,
.c0 .slick-next.slick-disabled {
  visibility: hidden;
}

@media (max-width:1170px) {
  .c0 {
    overflow-x: hidden;
  }
}

@media (min-width:1170px) {
  .c0 .slick-slide > div {
    margin: 0 1.6rem;
  }

  .c0 .slick-list {
    margin: 0 -1.6rem;
  }
}

<section
  class="c0"
  color="white"
>
  <section
    class="c1"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        aria-label="previous games"
        class="c2 slick-arrow slick-prev slick-disabled"
        data-role="none"
        fill="currentColor"
        focusable="false"
        style="display: block;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
          opacity="0.87"
        />
        <path
          d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
        />
      </svg>
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x140"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x141"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="2"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x142"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="3"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x143"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="4"
            style="outline: none; width: 0px;"
            tabindex="-1"
          />
        </div>
      </div>
      <svg
        aria-hidden="true"
        aria-label="next games"
        class="c2 slick-arrow slick-next"
        data-role="none"
        fill="currentColor"
        focusable="false"
        style="display: block;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 24H0V0h24v24z"
          fill="none"
          opacity="0.87"
        />
        <path
          d="M6.49 20.13l1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13z"
        />
      </svg>
    </div>
  </section>
</section>
`;

exports[`<GameSlider /> should render with 4 active items 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c12 {
  background-image: linear-gradient(180deg,#ff5f5f 0%,#f062c0 50%);
  border: none;
  border-radius: 0.4rem;
  color: #FAFAFA;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.2rem;
  height: 3rem;
}

.c12:hover,
.c12:focus {
  background-image: linear-gradient(180deg,#e35565 0%,#d958a6 50%);
}

.c12 svg {
  width: 1.6rem;
}

.c12 svg + span {
  margin-left: 0.8rem;
}

.c3 {
  background-color: #FAFAFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 100%;
  position: relative;
}

.c4 {
  -webkit-animation: placeholderShimmer 1s linear infinite forwards;
  animation: placeholderShimmer 1s linear infinite forwards;
  background-size: 80rem 14rem;
  background: #ededed;
  background-image: linear-gradient( to right,#ededed 0%,#e1e1e1 20%,#ededed 40%,#ededed 100% );
  height: 14rem;
  width: 100%;
}

.c4 img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c6 {
  max-width: calc(100% - 2.5rem);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  height: 100%;
  margin: 1.6rem;
}

.c7 {
  color: #030517;
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 1.6rem;
}

.c8 {
  color: #8F8F8F;
  font-size: 1.4rem;
  font-weight: 600;
}

.c13 {
  background-color: transparent;
  border: none;
  color: #F231A5;
  cursor: pointer;
  outline: none;
  position: absolute;
  top: -0.5rem;
  right: 0;
}

.c13 svg {
  width: 2.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 0.8rem;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  height: 3rem;
  color: #8F8F8F;
  margin-right: 1.6rem;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  height: 3rem;
  color: #FAFAFA;
  padding: 0 0.8rem;
  background-color: #3CD3C1;
  border-radius: 0.4rem;
  margin-right: calc(0.8rem / 2);
}

.c1 .slick-slider {
  position: relative;
  display: block;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -khtml-user-select: none;
  -ms-touch-action: pan-y;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent;
}

.c1 .slick-list {
  position: relative;
  display: block;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.c1 .slick-list:focus {
  outline: none;
}

.c1 .slick-list.dragging {
  cursor: pointer;
  cursor: hand;
}

.c1 .slick-slider .slick-track,
.c1 .slick-slider .slick-list {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c1 .slick-track {
  position: relative;
  top: 0;
  left: 0;
  display: block;
}

.c1 .slick-track:before,
.c1 .slick-track:after {
  display: table;
  content: '';
}

.c1 .slick-track:after {
  clear: both;
}

.c1 .slick-loading .slick-track {
  visibility: hidden;
}

.c1 .slick-slide {
  display: none;
  float: left;
  height: 100%;
  min-height: 1px;
}

.c1 [dir='rtl'] .slick-slide {
  float: right;
}

.c1 .slick-slide img {
  display: block;
}

.c1 .slick-slide.slick-loading img {
  display: none;
}

.c1 .slick-slide.dragging img {
  pointer-events: none;
}

.c1 .slick-initialized .slick-slide {
  display: block;
}

.c1 .slick-loading .slick-slide {
  visibility: hidden;
}

.c1 .slick-vertical .slick-slide {
  display: block;
  height: auto;
  border: 1px solid transparent;
}

.c1 .slick-arrow.slick-hidden {
  display: none;
}

.c0 .slick-track,
.c0 .slick-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .slick-slide > div {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  height: 100%;
  margin: 0 0.8rem;
}

.c0 .slick-list {
  margin: 0 -0.8rem;
}

.c0 .slick-prev,
.c0 .slick-next {
  display: block;
  color: #030517;
  cursor: pointer;
  height: 2.5rem;
  width: 2.5rem;
  padding: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c0 .slick-prev {
  left: -5.6rem;
}

.c0 .slick-next {
  right: -5.6rem;
}

.c0 .slick-prev.slick-disabled,
.c0 .slick-next.slick-disabled {
  visibility: hidden;
}

@media (max-width:1170px) {
  .c0 {
    overflow-x: hidden;
  }
}

@media (min-width:1170px) {
  .c0 .slick-slide > div {
    margin: 0 1.6rem;
  }

  .c0 .slick-list {
    margin: 0 -1.6rem;
  }
}

<section
  class="c0"
  color="black"
>
  <section
    class="c1"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        aria-label="previous games"
        class="c2 slick-arrow slick-prev slick-disabled"
        data-role="none"
        fill="currentColor"
        focusable="false"
        style="display: block;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
          opacity="0.87"
        />
        <path
          d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
        />
      </svg>
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x140"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x141"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="2"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x142"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="3"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <article
                class="c3"
              >
                <div
                  class="c4"
                >
                  <img
                    alt="Population Zero"
                    src="https://source.unsplash.com/user/willianjusten/300x143"
                  />
                </div>
                <div
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <h3
                      class="c7"
                    >
                      Population Zero
                    </h3>
                    <h4
                      class="c8"
                    >
                      Rockstar Games
                    </h4>
                  </div>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      R$ 235,00
                    </div>
                    <div
                      class="c11"
                    >
                      R$ 215,00
                    </div>
                    <button
                      aria-label="Add to Cart"
                      class="c12"
                    >
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4l-3.87 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2z"
                        />
                      </svg>
                    </button>
                  </div>
                  <button
                    class="c13"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Add to Wishlist"
                      class="c2"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                      />
                    </svg>
                  </button>
                </div>
              </article>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="4"
            style="outline: none; width: 0px;"
            tabindex="-1"
          />
        </div>
      </div>
      <svg
        aria-hidden="true"
        aria-label="next games"
        class="c2 slick-arrow slick-next"
        data-role="none"
        fill="currentColor"
        focusable="false"
        style="display: block;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 24H0V0h24v24z"
          fill="none"
          opacity="0.87"
        />
        <path
          d="M6.49 20.13l1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13z"
        />
      </svg>
    </div>
  </section>
</section>
`;
